fix gaps

--- a/src/components/IconWithDescription/itemWithDescription.module.scss
+++ b/src/components/IconWithDescription/itemWithDescription.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  @apply flex flex-col gap-5 md:w-96 w-full items-center;
+  @apply flex flex-col gap-12 md:w-96 w-full items-center;
   .icon {
     @apply text-inherit;
     svg {
